@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0

package "aisafe.app.console.presentation.airtransportcompany" {
    class RegisterAirTransportCompanyUI {
        +doShow() : boolean
        +headline() : String
    }
}

package "aisafe.airtransportcompany.application" {
    class RegisterAirTransportCompanyController <<UseCaseController>> {
        -authz : AuthorizationService
        -repo : AirTransportCompanyRepository
        +registerCompany(name, iataCode, icaoCode) : AirTransportCompany
    }
}

package "aisafe.airtransportcompany.repositories" {
    interface AirTransportCompanyRepository {
        +findByName(name : String) : Optional<AirTransportCompany>
        +findByIcaoCode(code : ICAOCode) : Optional<AirTransportCompany>
    }
}

package "aisafe.airtransportcompany.domain" {
    class AirTransportCompany <<entity, aggregate root>> {
        -name : String
        -icaoCode : ICAOCode
        -fleet : Set<String>
        +identity() : IATACode
        +name() : String
        +icaoCode() : ICAOCode
        +addAircraftToFleet(aircraft : Aircraft) : void
        +fleet() : Set<String>
    }

    class IATACode <<value object, identity>> {
        -code : String
        +{static} valueOf(code : String) : IATACode
        +compareTo(other : IATACode) : int
        +toString() : String
    }

    class ICAOCode <<value object>> {
        -code : String
        +{static} valueOf(code : String) : ICAOCode
        +toString() : String
    }
}

package "aisafe.infrastructure.persistence.inmemory" {
    class InMemoryAirTransportCompanyRepository {
        +findByName(name : String) : Optional<AirTransportCompany>
        +findByIcaoCode(code : ICAOCode) : Optional<AirTransportCompany>
    }
}

package "aisafe.infrastructure.persistence.jpa" {
    class JpaAirTransportCompanyRepository {
        +findByName(name : String) : Optional<AirTransportCompany>
        +findByIcaoCode(code : ICAOCode) : Optional<AirTransportCompany>
    }
}

interface DomainRepository<ID, T> {
}

AirTransportCompanyRepository --|> DomainRepository
InMemoryAirTransportCompanyRepository ..|> AirTransportCompanyRepository : implements
JpaAirTransportCompanyRepository ..|> AirTransportCompanyRepository : implements

RegisterAirTransportCompanyUI ..> RegisterAirTransportCompanyController : uses
RegisterAirTransportCompanyController ..> AirTransportCompanyRepository : uses
RegisterAirTransportCompanyController ..> AirTransportCompany : creates
AirTransportCompanyRepository ..> AirTransportCompany : persists
AirTransportCompany "1" *-- "1" IATACode : "identified by"
AirTransportCompany "1" *-- "1" ICAOCode : "holds"

@enduml
